# bstb

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
bstb/: __init__.py  calculate.py  core.py  greatcircle.py  logo.py  loxodrome.py  waypoint.py  word_value.py
docs/: CNAME  README.md  bearing.md  destination.md  download.md  epilogue.md  install.md  introduction.md  links.md  usage.md
docs/usage/: bearing.md  destination.md  distance.md
tests/: test_logo.py  test_waypoint.py  test_word_value.py
tests/calculate/: test_bearing.py  test_distance.py  test_waypoint.py
tests/core/: test_angle.py  test_bearing.py  test_distance.py  test_latitude.py  test_longitude.py  test_waypoint.py
tests/greatcircle/: test_bearing.py  test_destination.py  test_distance.py
tests/loxodrome/: test_bearing.py  test_destination.py  test_distance.py
