[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "black>=23.1.0",
    "pylint>=2.17.0",
]

[project]
name = "bstb"
version = "0.1.0"
description = "Breastbone - Geocaching toolbox"
authors = [
    {name = "Cees van de Griend", email = "cees@griend.eu"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"

[project.license] 
text = "GPL-3.0"

[project.urls]
Source = "https://github.com/ceesvandegriend/bstb"

[tool.pdm.scripts]
test = "python3 -m pytest"
format = "python3 -m black bstb/ tests/"
lint = "python3 -m pylint --disable=C,R bstb/ tests/"

[tool.pytest.ini_options]
# addopts = "--cov=bstb"
python_classes = ["Test", ]
python_functions = ["test_", ]
python_files = ["test_*.py",]
testpaths = [ "tests/", ]

[tool.black]
line-length = 119
target-version = [
    "py37",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
